[package]
name = "starknet_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nanos_sdk = { git = "https://github.com/yogh333/ledger-nanos-sdk.git", branch="feat/libcall_support" }
nanos_sdk = { path = "../ledger-nanos-sdk" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true

[package.metadata.nanos]
api_level = "1"
curve = ["secp256k1"]
path = ["m/2645'"]
flags = "0"
icon = "crab.gif"
icon_small = "starknet_small.gif"
name = "staRknet"
